# final_analysis_project

./: README.md  notebook.ipynb  prediccion_proyectos_RodrigoTapiador.ipynb  pyproject.toml
