[project]
name = "final-analysis-project"
version = "0.1.0"
description = "Proyecto final: predicción del tiempo de resolución de issues con TAWOS"
readme = "README.md"
requires-python = ">=3.13.12"
dependencies = [
    "cryptography>=46.0.7",
    "ipykernel>=7.2.0",
    "jinja2>=3.1.6",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pip>=26.0.1",
    "pymysql>=1.1.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shap>=0.46.0",
    "sqlalchemy>=2.0.40",
    "xgboost>=3.0.0",
]
